tests-integration/tests/roundtrip/sequences/errors/intersect-sequence/via-conjure.expected-error.txt
Error running `conjure pretty`: Error:
    tests/roundtrip/sequences/errors/intersect-sequence/input.essence:4:17:
  |
4 | such that bar = foo union sequence(2,3)
  |                 ^^^
Type error:
	Expected: "Set MSet funcition or relation"
	Got: sequence of int

tests/roundtrip/sequences/errors/intersect-sequence/input.essence:4:27:
  |
4 | such that bar = foo union sequence(2,3)
  |                           ^^^^^^^^^^^^^
Type error:
	Expected: "Set MSet funcition or relation"
	Got: sequence of int

